# lab2_sem2_2

./: CMakeLists.txt  CMakeSettings.json
lab2_sem2_2/: CMakeLists.txt  input.cpp  input.h  list.cpp  list.h  main.cpp  vector.cpp  vector.h
